Declare configuration variables

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+SECRET_KEY='fo25-cybn3s2q+41tgdm#$ip$lhr%rs1pr%h7(hv9e7xc5y=(5'
+DEBUG=True
 DB_NAME='instagram'
 DB_USER='rewel'
 DB_PASSWORD='LeBron'
