--- a/.env
+++ b/.env
@@ -1,10 +1,14 @@
 SECRET_KEY='fo25-cybn3s2q+41tgdm#$ip$lhr%rs1pr%h7(hv9e7xc5y=(5'
-DEBUG=True
+DEBUG=False
 DB_NAME='instagram'
 DB_USER='rewel'
 DB_PASSWORD='LeBron'
-EMAIL_USE_TLS = True
-EMAIL_HOST = 'smtp.gmail.com'
-EMAIL_PORT = 587
-EMAIL_HOST_USER = 'doktatech2@gmail.com'
-EMAIL_HOST_PASSWORD = 'grodtwdah2019'
+DB_HOST='127.0.0.1'
+EMAIL_USE_TLS=True
+EMAIL_HOST='smtp.gmail.com'
+EMAIL_PORT=587
+MODE='prod'
+ALLOWED_HOSTS='localhost','herokuapp.com','127.0.0.1'
+EMAIL_HOST_USER='doktatech2@gmail.com'
+EMAIL_HOST_PASSWORD='grodtwdah2019'
+DISABLE_COLLECTSTATIC=1
